tests/snapshots/errors/asm_stack_underflow.mc
// Test stack underflow runtime error
asm {
    __emit("Add");
};
